# zeek-plugin-roca

./: CMakeLists.txt  COPYING  README.md  configure.plugin
cmake/: FindGMP.cmake
scripts/: main.bro
src/: Plugin.cc  Plugin.h  roca.bif  roca.c
tests/: btest.cfg
tests/Baseline/roca.show-plugin/: output
tests/Baseline/roca.test-key/: .stderr
tests/Baseline/roca.test-key-connection/: .stdout
tests/Traces/: vulnerable.pcap
tests/roca/: show-plugin.bro  test-key-connection.bro  test-key.bro  test-script.bro
